@@ -83,6 +83,7 @@ public:
 	void saveGlobalState () VSTGUI_OVERRIDE_VMETHOD;
 	void restoreGlobalState () VSTGUI_OVERRIDE_VMETHOD;
 	CGraphicsPath* createGraphicsPath () VSTGUI_OVERRIDE_VMETHOD;
+	CGraphicsPath* createTextPath (const CFontRef font, UTF8StringPtr text) VSTGUI_OVERRIDE_VMETHOD;
 	void drawGraphicsPath (CGraphicsPath* path, PathDrawMode mode = kPathFilled, CGraphicsTransform* transformation = 0) VSTGUI_OVERRIDE_VMETHOD;
 	void fillLinearGradient (CGraphicsPath* path, const CGradient& gradient, const CPoint& startPoint, const CPoint& endPoint, bool evenOdd = false, CGraphicsTransform* transformation = 0) VSTGUI_OVERRIDE_VMETHOD;
 	void fillRadialGradient (CGraphicsPath* path, const CGradient& gradient, const CPoint& center, CCoord radius, const CPoint& originOffset = CPoint (0, 0), bool evenOdd = false, CGraphicsTransform* transformation = 0) VSTGUI_OVERRIDE_VMETHOD;
